   and Jules. [SW]
 * @[out]pageformat could sometimes receive the wrong alias in %2. Reported
   by Padraic. [MG]
 * align() didn't correctly apply ANSI to empty columns. Reported by
   Padraic. [MG]
 * Fix compile warning in player.c when sendmail is not enabled. Reported by
   Padraic. [MG]
 * Fix hardcode bug in ansi_strcmp, which affected the softcode splice()
   function. [MG]

Version 1.8.4 patchlevel 5                                 Jun 19,  2011

Major Changes:

 * The experimental --enable-ssl_slave option for configure allows
   persistant SSL connections that won't get booted when the mush
   restarts. Requires libevent v2.X. [SW]
 * info_slave, the sub-process used for resolving hostnames, now uses
   libevent if available. [SW]
 * Rewrite of large portions of notify.c. The main public function
   there, notify_anything(), now takes different arguments.
   notify_format() and notify() are unchanged. Should be largely
   unnoticable for players. [MG]

Commands:
 * @edit/quiet edits attributes, but doesn't spam you with the
   modified values, just gives you a count of modified
   attributes. Suggested by Padraic. [MG]
 * You can now have more than one command (with the action list
   enclosed in {curly braces}) in the rhs arg of @force/noeval. [MG]
 * @ps/debug <pid> will display extra information about a queue
   entry's evaluation environment. [SW]
 * @pemit now acts as if /silent was given when the executor and
   target are the same object, for consistency with other
   sound-producing commands and to fix an issue with
   @pemit/spoof. [SW]
 * @command now shows the failure message that can be set with
   restrict_command or @command/restrict. [SW]
 * @message now takes a /remit or /oemit switch, to make it work like
   those commands instead of @pemit. Also takes a /nospoof switch to
   make it like the @ns*emit versions. [MG]
 * @pemit/list/noisy now shows a confirmation message. [MG]

Powers: