@@ -681,42 +681,43 @@ For more, see Entries-33
  ulambda()                 uldefault()               ulocal()                 
  ulocal2                   unfindable                unfollow                 
  uninspected               unique()                  unregistered             
- unsetq()                  use                       user-defined commands    
- user-defined2             utctime()                 utility functions        
- v()                       v-function                vadd()                   
- val()                     valid()                   vcross()                 
- vdim()                    vdot()                    vector functions         
- verbose                   verbs                     verbs2                   
- version()                 visible()                 visual                   
- vmag()                    vmax()                    vmin()                   
+ unsetq()                  uptime()                  use                      
+ user-defined commands     user-defined2             utctime()                
+ utility functions         v()                       v-function               
+ vadd()                    val()                     valid()                  
+ vcross()                  vdim()                    vdot()                   
+ vector functions          verbose                   verbs                    
+ verbs2                    version()                 visible()                
+ visual                    vmag()                    vmax()                   
 
 For more, see Entries-34
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 & Entries-34
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
- vmul()                    vrml                      vsub()                   
- vunit()                   warnings                  warnings list            
- warnings list2            where()                   whisper                  
- who                       who2                      width()                  
- wildcards                 wildgrep()                wildgrepi()              
- wipe()                    with                      wizard                   
- wordpos()                 words()                   wrap()                   
- xattr()                   xattrp()                  xcon()                   
- xexits()                  xget()                    xmwho()                  
- xmwhoid()                 xor()                     xplayers()               
- xthings()                 xvcon()                   xvexits()                
- xvplayers()               xvthings()                xwho()                   
- xwhoid()                  z_tel                     zemit()                  
- zfun()                    zmo                       zmp                      
- zmr                       zmt                       zmwho()                  
- zone                      zone master objects       zone master rooms        
+ vmin()                    vmul()                    vrml                     
+ vsub()                    vunit()                   warnings                 
+ warnings list             warnings list2            where()                  
+ whisper                   who                       who2                     
+ width()                   wildcards                 wildgrep()               
+ wildgrepi()               wipe()                    with                     
+ wizard                    wordpos()                 words()                  
+ wrap()                    xattr()                   xattrp()                 
+ xcon()                    xexits()                  xget()                   
+ xmwho()                   xmwhoid()                 xor()                    
+ xplayers()                xthings()                 xvcon()                  
+ xvexits()                 xvplayers()               xvthings()               
+ xwho()                    xwhoid()                  z_tel                    
+ zemit()                   zfun()                    zmo                      
+ zmp                       zmr                       zmt                      
+ zmwho()                   zone                      zone master objects      
 
 For more, see Entries-35
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 & Entries-35
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
- zone masters              zone objects              zone()                   
- zones                     zones2                    zwho()                   
+ zone master rooms         zone masters              zone objects             
+ zone()                    zones                     zones2                   
+ zwho()                                                                       
 
 & &Entries
 -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
